@@ -21,8 +21,9 @@ import ch.arrg.logreader.core.Resources;
 
 // TODO FEAT highlight occurences
 // TODO FEAT [GH-3] collapsible exceptions
-// TODO FEAT load and restore session
-
+// TODO FEAT load and restore session (open files + filters)
+// TODO IMPR javadoc
+// TODO IMPR license
 // TODO BUG 2 with -n, old lines are removed only on refilter()
 
 /**
