@@ -6,24 +6,27 @@ import javax.swing.Box;
 import javax.swing.BoxLayout;
 import javax.swing.JTextField;
 
+import ch.arrg.logreader.filter.TabAwareFilter;
 import ch.arrg.logreader.filter.WordFilter;
 import ch.arrg.logreader.ui.interfaces.FilterCallback;
 import ch.arrg.logreader.ui.logic.UiHelpers;
 
-public class FilterField extends AbstractFilterWidget {
+public class TabAwareField extends AbstractFilterWidget {
 
 	private JTextField textField;
 	private Box box;
 
-	public FilterField() {
+	public TabAwareField() {
 		super();
 
 		box = new Box(BoxLayout.LINE_AXIS);
 
-		UiHelpers.addFilterLabel(box, "Match all of:");
+		UiHelpers.addFilterLabel(box, "Reject from:");
 
 		textField = new JTextField();
 		box.add(textField);
+
+		UiHelpers.addFilterLabel(box, "including following tabbed lines.");
 	}
 
 	@Override
@@ -32,22 +35,9 @@ public class FilterField extends AbstractFilterWidget {
 	}
 
 	@Override
-	public WordFilter asFilter() {
-		return FilterField.convertTextField(textField);
-	}
-
-	public static WordFilter convertTextField(JTextField field) {
-		String text = field.getText();
-
-		WordFilter filter = new WordFilter();
-
-		String[] whiteList = text.split("\\s+");
-		for (String word : whiteList) {
-			if (word.trim().length() > 0) {
-				filter.addWord(word);
-			}
-		}
-
+	public TabAwareFilter asFilter() {
+		WordFilter inner = FilterField.convertTextField(textField);
+		TabAwareFilter filter = new TabAwareFilter(inner);
 		return filter;
 	}
 
